[metadata]
name = saad
summary = Saad is a set of tools used to learn some techies
description-file =
    README.rst
author = Saad Zaher
author-email = saad.zaher@hpe.com
home-page = http://www.hpe.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    saad

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = saad/locale
domain = saad

[update_catalog]
domain = saad
output_dir = saad/locale
input_file = saad/locale/freezer.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = saad/locale/freezer.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source


[entry_points]
oslo.config.opts =
    saad = saad.common.config:list_opts
console_scripts =
    saad = saad.main:main
